<resources>
    <string name="app_name">News App</string>

    <string name="headlines">Headlines</string>
    <string name="favorites">Favorites</string>

    <!-- Fragment: Online News -->
    <string name="title_latest_news">Latest News</string>

    <string name="message_error_default">Oops. Something wrong has happened. Please try again later</string>
    <string name="message_info_offline">Looks like you are currently offline. Please try again later or use Favorites section</string>

    <!-- News List: Menu -->
    <string name="action_settings">Settings</string>

    <!-- Fragment: Offline News -->
    <string name="title_offline_news">Offline News</string>

    <string name="message_favorites_empty">No saved news stories yet.\nUse ⭐️️ to add new news articles to this section</string>
    <string name="message_favorites_empty_icon">🧐</string>

    <!-- Fragment: News Details -->
    <string name="title_news_details">News Details</string>
    <string name="message_link_copied_to_clipboard">News article link copied to the clipboard</string>

    <!-- News Details: Menu -->
    <string name="action_open_with">Open With …</string>
    <string name="action_copy_link">Copy Link</string>

    <!-- Activity: Settings -->
    <string name="title_activity_settings">Application Settings</string>

    <string name="message_automatic_news_updates_check_scheduled">Scheduled Automatic News Updates Check</string>
    <string name="message_automatic_news_updates_check_cancelled">Automatic News Updates Check Cancelled</string>

    <string name="settings_section_header_display">Display Settings</string>
    <string name="settings_show_thumbnails">Show Thumbnails</string>
    <string name="setting_show_thumbnails_summary">Automatically download and display news thumbnails when viewing latest news</string>
    <string name="setting_key_show_thumbnails">setting_key_show_thumbnails</string>

    <string name="settings_section_background_refresh">Automatic Refresh</string>
    <string name="setting_key_background_refresh_interval">setting_key_background_refresh_interval</string>
    <string name="setting_background_refresh_interval">Refresh Interval</string>
    <string name="setting_background_refresh_internal_dialog_title">Select Refresh Interval</string>

    <string name="setting_key_last_seen_news_date">setting_key_last_seen_news_date</string>

    <!-- Notifications -->
    <string name="notifications_channel_name">New News Notifications</string>
    <string name="notifications_channel_description">Information about new news available in application</string>
    <string name="notifications_new_news_available_title">New News Available</string>
    <string name="notifications_new_news_available_descriptions">Tap to get list of latest news</string>

    <!-- Content Descriptions -->
    <string name="content_description_news_article_image">News article image</string>
    <string name="content_description_fab_add_to_favorites">Save for offline reading button</string>
    <string name="content_description_error_icon">Error Icon</string>
    <string name="content_description_offline_icon">Offline Icon</string>

</resources>
