<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_section_header_display">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_settings_show_thumbnails"
            app:key="@string/setting_key_show_thumbnails"
            app:summary="@string/setting_show_thumbnails_summary"
            app:title="@string/settings_show_thumbnails" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_section_background_refresh">
        <ListPreference
            app:defaultValue="0"
            app:dialogTitle="@string/setting_background_refresh_internal_dialog_title"
            app:entries="@array/setting_background_refresh_internal_entries"
            app:entryValues="@array/setting_background_refresh_internal_values"
            app:icon="@drawable/ic_refresh"
            app:key="@string/setting_key_background_refresh_interval"
            app:title="@string/setting_background_refresh_interval"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>